# codex-imagegen

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/journals/: 2026-06-24-edit-intent-and-token-report.md  2026-06-24-multi-provider-merge-pipeline.md
examples/: robo-scenes.txt
scripts/: edit_eval_cases.json  eval_edit_quality.py  probe_codex_self_judge.py  validate_responses.py
src/codex_imagegen/: __init__.py  auth.py  cli.py  edit_cli.py  generator.py  image_loader.py  merge_cli.py  pipeline.py  responses_client.py
src/codex_imagegen/core/: env_file.py  errors.py  image_dims.py  image_writer.py  orchestrator.py  output_report.py
src/codex_imagegen/features/: __init__.py  character.py  edit.py  merge.py
src/codex_imagegen/providers/: registry.py
src/codex_imagegen/providers/generate/: __init__.py  base.py
src/codex_imagegen/providers/generate/codex/: __init__.py  auth.py  client.py  provider.py
src/codex_imagegen/providers/generate/minimax/: __init__.py  client.py  provider.py
src/codex_imagegen/providers/vision/: __init__.py  base.py
tests/: test_auth.py  test_character_feature.py  test_cli.py  test_codex_auth.py  test_codex_client.py  test_codex_provider.py  test_edit_cli.py  test_edit_feature.py  test_env_file.py  test_image_dims.py  test_image_loader.py  test_image_writer.py  test_merge_cli.py  test_merge_feature.py  test_merge_with_vision.py  test_minimax_image_provider.py  test_orchestrator.py  test_output_report.py  test_pipeline.py  test_registry.py  test_responses_client.py  test_vision_minimax.py
(+3 files in other folders)
